# Tets_OOP_and_git

./: .gitignore  Decorators.py  My_commands.txt  magazin.py  main.py  mane.py  pyproject.toml  test.py  test_two.py  test_work.py
OOP/: SOLID.py  class_and_obj.py  property.py  publick_privat.py  work_oop.py  Абстракция.py  Инкапсуляция.py  Наследование.py  ООП с котиками.py  Полиморфизм.py
Ruff/: work_with_ruff.py
work_this_file/: os_path_and_Path.py  with_open_file.py  Связанный список.py
Декораторы/: Decorators.py  Параметризованные декораторы.py
Задания/: magazin.py  test.py  задание с броню отелей.py  задание с обработкой корзины.py
Итераторы/: Итератор.py
Итераторы/Генераторы/: Generator_Expression_Function.py  Yiedl.py
Конкурентность/: Fork.py  Gil.py  Need_study.txt  Notes.txt  Pipe.py  Pool.py  Process.py  Queue and Pipe.py  locker.txt  Блокировки процессов.py  Задачи от ИИ.txt  Команды конкурентности.txt  Многопоточность.py  Процессы.py
Конкурентность/Асинхронность/: Event Loop и базовые конструкции.py  Асинхронность_1.py  Асинхронные итераторы и контекстные менеджеры.py  Генераторы.py  Задачи (Tasks).py  Корутины и yield from.py
Разное/: Контекстные_менеджеры_with.py  Сравнение в пайтон.py  Хэшируемость.py
Регулярка/: modul_re.py
Структуры данных/: Связанный список.py
