[project]
name = "project-path-to-the-offer"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya",email = "ilya@ops.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "ruff (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
