[project]
name = "project-path-to-the-offer"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya",email = "ilya@ops.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "bandit (>=1.9.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = ">=3.12,<3.13"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "app"]
extend-exclude = [".venv", "venv", "build", "dist", "__pycache__", "migrations"]

[tool.ruff.lint]
# Набор правил: базовые ошибки/предупреждения + сортировка импортов + апгрейды и упрощения
select = ["E4", "E7", "E9", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app", "src"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"     # "double" | "single"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true